cmake_minimum_required(VERSION 3.6)
project(TUD_boda)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        src/dtl/Diff.hpp
        src/dtl/Diff3.hpp
        src/dtl/dtl.hpp
        src/dtl/functors.hpp
        src/dtl/Lcs.hpp
        src/dtl/Sequence.hpp
        src/dtl/Ses.hpp
        src/dtl/variables.hpp
        src/ext/caffe.proto
        src/ext/half.hpp
        src/ext/lodepng.cpp
        src/ext/lodepng.h
        src/ext/model.cc
        src/ext/model.h
        src/ext/pugiconfig.hpp
        src/ext/pugixml.cpp
        src/ext/pugixml.hpp
        src/ext/shader.cpp
        src/ext/shader.hpp
        src/ext/stb_truetype.h
        src/ext/upgrade_proto.cpp
        src/ext/vr5_mex_feats.cc
        src/anno_util.H
        src/asio_util.cc
        src/asio_util.H
        src/bb_tests.cc
        src/blf_pack.cc
        src/blf_pack.H
        src/boda.cc
        src/boda_base.cc
        src/boda_base.H
        src/boda_help.cc
        src/boda_tu_base.H
        src/build_info.H
        src/caffe_fwd.cc
        src/caffeif.cc
        src/caffeif.H
        src/caffepb.cc
        src/caffepb.H
        src/cap_app.cc
        src/cap_util.cc
        src/cap_util.H
        src/cnn-prof.cc
        src/cnn_codegen.cc
        src/cnn_op.cc
        src/cnn_op.H
        src/comp_util.cc
        src/comp_util.H
        src/conv_common.cc
        src/conv_common.H
        src/conv_pyra.cc
        src/conv_util.cc
        src/conv_util.H
        src/culibs-wrap-stub.cc
        src/culibs-wrap.cc
        src/culibs-wrap.H
        src/data-stream-ffmpeg.cc
        src/data-stream-file.cc
        src/data-stream-file.H
        src/data-stream-img-util.cc
        src/data-stream-mxnet.cc
        src/data-stream-pcap.cc
        src/data-stream-rosbag.cc
        src/data-stream-stream.cc
        src/data-stream-velo.cc
        src/data-stream-velo.H
        src/data-stream.cc
        src/data-stream.H
        src/data-to-img.cc
        src/data-to-img.H
        src/disp_app.cc
        src/disp_util.cc
        src/disp_util.H
        src/font-util.cc
        src/font-util.H
        src/gbt_tile.H
        src/geom_prim.cc
        src/geom_prim.H
        src/has_conv_fwd.cc
        src/has_conv_fwd.H
        src/has_main.cc
        src/has_main.H
        src/imagenet_util.H
        src/img_io-no-turbojpeg-stub.cc
        src/img_io-turbojpeg.cc
        src/img_io.cc
        src/img_io.H
        src/io_util.H
        src/latex-util.H
        src/lexp.cc
        src/lexp.H
        src/lmdb_caffe_disp.cc
        src/lmdb_caffe_io.cc
        src/lmdb_caffe_io.H
        src/lmdbif.cc
        src/lmdbif.H
        src/mapped-file-util.H
        src/mutex.H
        src/nesi.cc
        src/nesi.H
        src/nesi_decls.H
        src/nvrtc_util.cc
        src/nvrtc_util.H
        src/ocl_err.H
        src/ocl_util.cc
        src/octif-no-octave-stub.cc
        src/octif.cc
        src/octif.H
        src/op-tuner.cc
        src/op-tuner.H
        src/op_base.cc
        src/op_base.H
        src/os-render.cc
        src/os-render.H
        src/pyif-no-python-stub.cc
        src/pyif.cc
        src/pyif.H
        src/qblas-test.cc
        src/rand_util.H
        src/raw-vid-disp.cc
        src/results_io.cc
        src/results_io.H
        src/rtc_compute.cc
        src/rtc_compute.H
        src/rtc_func_gen.cc
        src/rtc_func_gen.H
        src/rtc_fwd.cc
        src/rtc_ipc.cc
        src/rtc_prof.cc
        src/stacktrace_util.H
        src/stacktrace_util_gnu.cc
        src/stacktrace_util_stub.cc
        src/str_util.cc
        src/str_util.H
        src/stream_util.cc
        src/stream_util.H
        src/test_all.cc
        src/test_base.H
        src/test_compute.cc
        src/test_dense.cc
        src/test_nesi.cc
        src/timers.cc
        src/timers.H
        src/xml_util.cc
        src/xml_util.H)

add_executable(TUD_boda ${SOURCE_FILES})